Made L1 cache optional through --enable-l1cache
	* Removed stale config.h
	* Updated autoconf script with relevant checks
	* Re-implemented leon3/grlib timer with less events
	* Bumped version to 2.15

--- a/Makefile.in
+++ b/Makefile.in
@@ -50,7 +50,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 bin_PROGRAMS = sis$(EXEEXT)
 subdir = .
-DIST_COMMON = $(am__configure_deps) $(srcdir)/Makefile.am \
+DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(srcdir)/stamp-vti $(srcdir)/version.texi \
 	$(top_srcdir)/build-aux/depcomp \
