--- a/Makefile.in
+++ b/Makefile.in
@@ -48,18 +48,23 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+build_triplet = @build@
+host_triplet = @host@
 bin_PROGRAMS = sis$(EXEEXT)
 subdir = .
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(srcdir)/stamp-vti $(srcdir)/version.texi \
+	$(top_srcdir)/build-aux/config.guess \
+	$(top_srcdir)/build-aux/config.sub \
 	$(top_srcdir)/build-aux/depcomp \
 	$(top_srcdir)/build-aux/install-sh \
 	$(top_srcdir)/build-aux/mdate-sh \
 	$(top_srcdir)/build-aux/missing \
 	$(top_srcdir)/build-aux/texinfo.tex $(top_srcdir)/configure \
-	build-aux/compile build-aux/depcomp build-aux/install-sh \
-	build-aux/mdate-sh build-aux/missing build-aux/texinfo.tex
+	build-aux/compile build-aux/config.guess build-aux/config.sub \
+	build-aux/depcomp build-aux/install-sh build-aux/mdate-sh \
+	build-aux/missing build-aux/texinfo.tex
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -185,6 +190,7 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
+LIBADD = @LIBADD@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LINENOISE = @LINENOISE@
@@ -216,14 +222,22 @@ am__quote = @am__quote@
 am__tar = @am__tar@
 am__untar = @am__untar@
 bindir = @bindir@
+build = @build@
 build_alias = @build_alias@
+build_cpu = @build_cpu@
+build_os = @build_os@
+build_vendor = @build_vendor@
 builddir = @builddir@
 datadir = @datadir@
 datarootdir = @datarootdir@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
+host = @host@
 host_alias = @host_alias@
+host_cpu = @host_cpu@
+host_os = @host_os@
+host_vendor = @host_vendor@
 htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
@@ -254,7 +268,8 @@ sis_SOURCES = erc32.c float.c grlib.c leon3.c exec.c func.c help.c \
 	      $(LN_SRC)
 
 AM_CFLAGS = -DFAST_UART
-sis_LDADD = -lm @READLINE@
+sis_LDADD = -lm @READLINE@ @LIBADD@
+EXTRA_DIST = elf.h grlib.h linenoise.h riscv.h sis.h sparc.h
 info_TEXINFOS = sis.texi
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
