Map RISC-V FPU CSR on host cpu using fenv.h

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ else
 endif
 
 bin_PROGRAMS = sis
-sis_SOURCES = erc32.c float.c grlib.c leon3.c exec.c func.c help.c \
+sis_SOURCES = erc32.c grlib.c leon3.c exec.c func.c help.c \
 	      sparc.c riscv.c leon2.c sis.c interf.c remote.c elf.c \
 	      $(LN_SRC)
 
