Add networking support using host tap device
	* Emulation of GRETH 10/100 Mbit MAC and PHY

	* Supported only on linux

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,6 +7,7 @@ endif
 bin_PROGRAMS = sis
 sis_SOURCES = erc32.c grlib.c leon3.c exec.c func.c help.c \
 	      sparc.c riscv.c leon2.c sis.c interf.c remote.c elf.c \
+	      greth.c tap.c \
 	      $(LN_SRC)
 
 AM_CFLAGS = -DFAST_UART
